{
    "name": "GameInput",
    "maps": [
        {
            "name": "CameraMovement",
            "id": "e39cb924-7b9a-4762-8dcd-ce8e314675d5",
            "actions": [
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "c65b6b4d-4b99-4ada-8f70-89e03ccd349b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "46e48212-e3fa-4dfb-a3f3-0266138a2cd2",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "KeyboardMovement",
            "id": "084282e5-2a13-4464-b652-fa3276b7b4f6",
            "actions": [
                {
                    "name": "KeyboardMove",
                    "type": "Value",
                    "id": "ed1ec42f-a1a3-4e71-90ac-47ecdb3d656b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "3f99e55a-112c-43e2-bbe8-38b851089e6c",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "d7b55d55-f76b-4166-ac50-3fb4f7c3c941",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "f9f9ce80-1e39-46e1-9b31-efc9e433183f",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "e6ae7163-1c50-414e-8b60-657137926aaa",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "52937528-f6c5-43b7-bfbb-436a224c4fff",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "FlagPlacement",
            "id": "14c65dc7-c639-45e6-9fcf-40844b6232ca",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "5495febb-0a5c-4cd9-ac5e-8a087c725580",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "db04a0a4-aa61-4a7a-b307-fab2d652b86f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7588507b-8070-4df6-be1c-0d3f3fa40b04",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f44dc3cf-2cd3-4c6a-803d-2f74b669dcc9",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Mouse",
            "id": "e2daa03e-32df-4d98-9c1e-31d87af62984",
            "actions": [
                {
                    "name": "MouseDelta",
                    "type": "Value",
                    "id": "6cb110f3-f51a-4837-b6f3-a4f7481c9d1f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "e12253bc-a3e0-48ec-a5cd-c34f0b04c852",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "e4700ecb-fa9e-4742-a95e-9257ca3ff0c8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "de7e91a1-1d82-44d6-960e-568a488aba18",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c2f7668-ddc9-44ff-b9d7-d194d02e28a1",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8bfb7b34-56f8-4e7a-bd35-5efdc7be934d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}